--- a/package.json
+++ b/package.json
@@ -9,13 +9,23 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~52.0.11",
+    "@expo-google-fonts/space-mono": "~0.2.3",
+    "@expo/metro-runtime": "~4.0.0",
+    "eas-cli": "^14.0.2",
+    "expo": "^52.0.17",
+    "expo-font": "^13.0.1",
+    "expo-linear-gradient": "^14.0.1",
+    "expo-navigation-bar": "~4.0.5",
     "expo-status-bar": "~2.0.0",
     "react": "18.3.1",
-    "react-native": "0.76.3"
+    "react-dom": "18.3.1",
+    "react-native": "0.76.3",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-web": "~0.19.13",
+    "expo-dev-client": "~5.0.5"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.25.2"
   },
   "private": true
 }
