--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@expo/metro-runtime": "~4.0.0",
     "eas-cli": "^14.0.2",
     "expo": "^52.0.17",
+    "expo-dev-client": "~5.0.5",
     "expo-font": "^13.0.1",
+    "expo-keep-awake": "~14.0.1",
     "expo-linear-gradient": "^14.0.1",
     "expo-navigation-bar": "~4.0.5",
     "expo-status-bar": "~2.0.0",
@@ -21,8 +23,8 @@
     "react-dom": "18.3.1",
     "react-native": "0.76.3",
     "react-native-safe-area-context": "4.12.0",
-    "react-native-web": "~0.19.13",
-    "expo-dev-client": "~5.0.5"
+    "react-native-svg": "15.8.0",
+    "react-native-web": "~0.19.13"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2"
