--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "expo-dev-client": "~5.0.5",
     "expo-font": "^13.0.1",
     "expo-keep-awake": "~14.0.1",
-    "expo-linear-gradient": "^14.0.1",
+    "expo-linear-gradient": "~14.0.1",
     "expo-navigation-bar": "~4.0.5",
     "expo-status-bar": "~2.0.0",
     "react": "18.3.1",
