Add safe area on top

--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "swu-life-counter",
+    "name": "SWU Life Counter",
     "slug": "swu-life-counter",
     "version": "1.0.0",
     "orientation": "portrait",
